[package]
name = "minhook-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI to attach to a Windows process and trace calls to a function (registers + stack at hit time)."
repository = "https://github.com/AuDowty/minhook-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Console",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
